Changes to styling, accessibility, contrast issues

--- a/css/index.css
+++ b/css/index.css
@@ -184,13 +184,13 @@ body {
 }
 
 a {
-  color: #f40009;
+  color: #014713;
   font-weight: bold;
   text-decoration: none;
 }
 
 a:hover {
-  color: #990000;
+  color: #1db954;
   transition: 1.2s ease-out;
 }
 
@@ -234,7 +234,7 @@ span.pre:hover {
   background: #ffffff;
   display: grid;
   grid-template-columns: 1fr 3fr;
-  height: 45px;
+  height: 50px;
   overflow: hidden;
 }
 
@@ -283,16 +283,24 @@ a.tag {
   transition: color 0.3s ease-out;
 }
 
-.nav-item a:hover,
-a.tag:hover {
-  color: #000;
+.nav-item a:hover {
+  color: #1db954;
 }
 
 a.tag {
-  background-color: #1da1f2;
+  background-color: #f40009;
   border-radius: 4px;
-  color: white;
+  color: #000;
   padding: 0.25rem 1rem;
+}
+
+a.tag:hover {
+  background-color: #900;
+  color: #fff;
+}
+
+a.postlist-link {
+  font-size: 1.5em;
 }
 
 /* SEARCH FUNCTION */
@@ -634,11 +642,6 @@ label {
   line-height: 1.1;
   padding-bottom: 2rem;
   -webkit-text-stroke: 1px rgba(255, 255, 255, 1.0);
-  text-shadow:
-    -1px -1px 0 rgba(255, 255, 255, 1.0),
-    1px -1px 0 rgba(255, 255, 255, 1.0),
-    -1px 1px 0 rgba(255, 255, 255, 1.0),
-    1px 1px 0 rgba(255, 255, 255, 1.0);
   text-transform: uppercase;
 }
 
@@ -848,8 +851,9 @@ h1 {
   text-transform: uppercase;
 }
 
-h1:hover {
-  color: #222;
+h1.home:hover {
+  color: #1db954;
+  transition: .5s ease-out;
 }
 
 h2 {
@@ -946,10 +950,10 @@ blockquote:after {
 
 blockquote a {
   text-decoration: none;
-  background: #f8f8ff;
+  background: #fff;
   cursor: pointer;
   padding: 0 3px;
-  color: #f40009;
+  color: #014713;
 }
 
 blockquote a:hover {
@@ -1248,7 +1252,7 @@ span.middot {
 }
 
 #squeaky:hover {
-  background-color: #f8f8ff;
+  background-color: #fff;
 }
 
 /* STYLE GUIDE STUFF! */
@@ -1304,7 +1308,7 @@ div.box.dark_gray {
 div.box.red {
   background-color: #f40009;
   box-shadow: #c2c2c2 2px 3px 5px;
-  color: #ffffff;
+  color: #000;
 }
 
 div.box.crimson_red {
@@ -1316,7 +1320,7 @@ div.box.crimson_red {
 div.box.vivid_blue {
   background-color: #1da1f2;
   box-shadow: #c2c2c2 2px 3px 5px;
-  color: #ffffff;
+  color: #000;
 }
 
 div.box.mtndew_green {
